* add /mystatus command

--- a/lang/de.yml
+++ b/lang/de.yml
@@ -11,6 +11,9 @@ de:
     listing_intro_one: Hier ist der nächste Termin
     listing_intro_multiple: Hier sind die nächsten %{total} Termine
     listing_intro_empty: Es scheint keine Termine zu geben (oder du wolltest 0 Termine von mir sehen 😂)
+  status:
+    not_subscribed: Du erhälst von mir keine Erinnerungen, da du nicht angemeldet bist. Mit /subscribe kannst du das ändern! 😇
+    subscribed: Ich werde dich %{reminder_day_count} Tag(e) vor den Terminen um %{reminder_time} Uhr benachrichtigen! 🙃
   start: Hallo, ich bin der Müllbot 😊 Ich kann dir Nachrichten schicken, damit du rechtzeitig die Mülltonnen rausstellen kannst wenn sie geleert werden. Schicke /subscribe und es geht los. Mit /help erfährst du mehr über mich.
   errors:
     no_subscription_teaser: Ich glaube, du bist noch nicht angemeldet bei mir. 😇 Mit /subscribe kannst du dich anmelden, danach kannst du den Befehl %{command} nutzen!
