--- a/lang/de.yml
+++ b/lang/de.yml
@@ -23,9 +23,14 @@ de:
     Ich kann dir Nachrichten schicken, damit du rechtzeitig die Mülltonnen rausstellen kannst wenn sie geleert werden. Schicke /subscribe und es geht los. Mit /help erfährst du mehr über mich.
   settime:
     command_inline: |
-      Wann möchtest du benachrichtigt werden?
+      Um welche Uhrzeit möchtest du benachrichtigt werden?
 
-      Deine Eingabe: %{response}
+      Deine Eingabe: %{response} Uhr
+  setday:
+    command_inline: |
+      Wieviel Tage im Voraus möchtest du benachrichtigt werden?
+
+      Deine Eingabe: %{response} Tag(e)
   errors:
     no_subscription_teaser: Ich glaube, du bist noch nicht angemeldet bei mir. 😇 Mit /subscribe kannst du dich anmelden, danach kannst du den Befehl %{command} nutzen!
     setday:
