--- a/lang/de.yml
+++ b/lang/de.yml
@@ -12,10 +12,11 @@ de:
     listing_intro_multiple: Hier sind die nächsten %{total} Termine
     listing_intro_empty: Es scheint keine Termine zu geben (oder du wolltest 0 Termine von mir sehen 😂)
   status:
-    not_subscribed: Du erhälst von mir keine Erinnerungen, da du nicht angemeldet bist. Mit /subscribe kannst du das ändern! 😇
-    subscribed_sameday: Ich werde dich am Tag der Termine um %{reminder_time} Uhr benachrichtigen! 🙃
-    subscribed_precedingday: Ich werde dich am Vortrag der Termine um %{reminder_time} Uhr benachrichtigen! 🙃
-    subscribed_otherday: Ich werde dich %{reminder_day_count} Tag(e) vor den Terminen um %{reminder_time} Uhr benachrichtigen! 🙃
+    intro: "Du erhälst Erinnerungen für die folgenden Einträge:"
+    not_subscribed: Du erhälst von mir keine Erinnerungen. Mit /subscribe kannst du das ändern! 😇
+    subscribed_sameday: Für %{calendar_name} werde dich am Tag der Termine um %{reminder_time} Uhr benachrichtigen! 🙃
+    subscribed_precedingday: Für %{calendar_name} werde ich dich am Vortrag der Termine um %{reminder_time} Uhr benachrichtigen! 🙃
+    subscribed_otherday: Für %{calendar_name} werde ich dich %{reminder_day_count} Tag(e) vor den Terminen um %{reminder_time} Uhr benachrichtigen! 🙃
   botstatus:
     uptime: Ich bin online seit %{uptime}.
     event_count: Ich kenne %{event_count} Events.
