Add bot message statistics class

--- a/lang/de.yml
+++ b/lang/de.yml
@@ -24,6 +24,11 @@ de:
   botstatus:
     intro: Ich bin online seit %{uptime} und kenne Events von %{calendar_count} Müllkalendern.
     calendar_info: "ID %{calendar_id}: %{calendar_name} (%{event_count} Events, %{subscribers_count} angemeldete Personen)"
+    bot_info: |
+      # ges. Nachrichten: %{bot_sent_msgs}
+      # empf. Nachrichten: %{bot_recvd_msgs}
+      # ges. Erinnerungen: %{bot_sent_reminders}
+      Laufzeit: %{bot_uptime}s
   start: |
     Hallo, ich bin %{botname} 😊
     Ich kann dir Nachrichten schicken, damit du rechtzeitig die Mülltonnen rausstellen kannst wenn sie geleert werden. Schicke /subscribe und es geht los. Mit /help erfährst du mehr über mich.
