--- a/lang/de.yml
+++ b/lang/de.yml
@@ -29,6 +29,15 @@ de:
       # empf. Nachrichten: %{bot_recvd_msgs}
       # ges. Erinnerungen: %{bot_sent_reminders}
       Laufzeit: %{bot_uptime}s
+    docker_info: |
+      Docker Image Version: %{docker_image_version}
+      Docker Image Author: %{docker_image_author}
+      Docker Image Build Time: %{docker_image_build_time}
+      Docker Image Source URL: %{docker_image_source_url}
+    os_info: |
+      Public IP: %{os_public_ip}
+      OS Version: %{os_version}
+      OS Uptime: %{os_uptime}
   start: |
     Hallo, ich bin %{botname} 😊
     Ich kann dir Nachrichten schicken, damit du rechtzeitig die Mülltonnen rausstellen kannst wenn sie geleert werden. Schicke /subscribe und es geht los. Mit /help erfährst du mehr über mich.
