--- a/lang/de.yml
+++ b/lang/de.yml
@@ -77,11 +77,10 @@ de:
       Ich kann dir Nachrichten schicken, damit du rechtzeitig die Mülltonnen rausstellen kannst wenn sie geleert werden.
       Ich kenne alle Daten von %{calendars_count} Müllkalendern 😎 und schicke an alle, die sich mittels /subscribe angemeldet haben, eine Benachrichtigung wenn eine Mülltonne rausgestellt werden muss. Den Zeitpunkt, an dem ich dich benachrichtige, kannst du einstellen.
     start: /start Ich stelle mich vor 😊
-    settime: /settime id HHmm Stelle die Uhrzeit ein, zu der ich dich benachrichtigen soll (z.B. "/settime 0 2200" wenn ich dich um 22 Uhr benachrichtigen soll)
-    setday: /setday id N Stelle den Tag ein, am dem ich dich benachrichtigen soll (z.B. "/setday 0 1" wenn ich dich 1 Tag vorher benachrichtigen soll)
-    subscribe: /subscribe id Melde dich bei mir an, damit du Benachrichtigungen erhälst
-    unsubscribe: /unsubscribe id Melde dich bei mir ab, damit du keine Benachrichtigungen mehr erhälst
-    events: /events id N Frage mich nach den nächsten N Abholterminen (z.B. "/events 0 10" wenn ich dir die nächsten 10 Termine zeigen soll)
-    mystatus: /mystatus Ich zeige dir an, welche Informationen ich zu dir gespeichert habe
-    botstatus: /botstatus Ich zeige dir ein paar interessante Informationen zu mir an
-    help: /help Ich zeige dir eine Hilfe aller meiner Befehle
+    settime: /settime Uhrzeit der Benachrichtigungen einstellen
+    setday: /setday Tag der Benachrichtigungen einstellen
+    subscribe: /subscribe Benachrichtigungen einschalten
+    unsubscribe: /unsubscribe Benachrichtigungen ausschalten
+    events: /events Abholtermine abfragen
+    mystatus: /mystatus Benachrichtigungen abfragen
+    help: /help Befehlshilfe anzeigen
